# perfect-report

./: .gitignore  AGENTS.md  ITERATION_LOG.md  PRD.md  README.md  TechDesign.md  findings.md  progress.md  task_plan.md
backend/: README.md  pyproject.toml
backend/src/report_backend/: __init__.py  main.py
backend/src/report_backend/api/: __init__.py  dependencies.py
backend/src/report_backend/api/routes/: report.py
backend/src/report_backend/core/: __init__.py  config.py
backend/src/report_backend/domain/: __init__.py  models.py
backend/src/report_backend/integrations/: __init__.py  bailian_adapter.py
backend/src/report_backend/parsers/: __init__.py  background_parser.py  markdown_renderer.py  template_filler.py  template_parser.py
backend/src/report_backend/services/: __init__.py  report_service.py  task_store.py  workspace.py
backend/src/report_backend/workflows/: report_workflow.py
backend/tests/: test_api.py  test_background_parser.py  test_markdown_renderer.py  test_report_workflow.py  test_template_filler.py  test_template_parser.py  test_workspace.py
example/: tmp_multi_image_probe.docx  tmp_result_template_fill.docx  tmp_result_template_fill_bugfix.docx  tmp_result_template_fill_styled.docx  ~$p_result_template_fill_bugfix.docx  实验报告.doc  实验报告模板.docx  实验报告模板二.docx  生成的报告.docx
frontend/: package-lock.json  package.json
frontend/src/: App.vue  style.css
reference-code/: search_mcp_reference.py
