[project]
name = "report-backend"
version = "0.1.0"
description = "Backend for the intelligent experiment report generator"
readme = "README.md"
authors = [
    { name = "Perfect Report Team", email = "blzs818@qq.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.122.0",
    "httpx>=0.28.1",
    "langgraph>=1.0.8",
    "pydantic-settings>=2.11.0",
    "pymupdf>=1.26.0",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
]

[project.scripts]
report-backend = "report_backend.main:main"

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]
